--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:pc": "powershell -Command \"$env:VITE_LEVANTE='TRUE'; $env:VITE_FIREBASE_PROJECT='DEV'; vite --force --host\"",
     "deploy:dev": "npm run build:dev && npx firebase use levante-admin-dev && npx firebase deploy --only hosting --config levante-firebase.json",
     "deploy:prod": "npm run build:prod && npx firebase use levante-admin-prod && npx firebase deploy --only hosting --config firebase.json",
-    "cypress:open": "cypress open",
+    "cy": "cypress open",
+    "cy:run": "cypress run",
     "format": "prettier . --write --log-level=warn",
     "generate-pwa-assets": "pwa-assets-generator",
     "check-format": "prettier . --check",
