--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -134,9 +134,11 @@ jobs:
       #       exit 1
       #     fi
 
+      - name: Check CI is true
+        run: |
+          echo "CI is ${{ env.CI }}"
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
-          wait-on: 'https://localhost:5173/'
-          wait-on-timeout: 60
