Adding Cypress artifacts and GitHub Actions.

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -121,23 +121,21 @@ jobs:
       - name: Start Vite dev server
         run: npm run dev &
 
-      # - name: Wait for Vite to be ready
-      #   run: |
-      #     echo "Waiting for http://localhost:5173"
-      #     for i in {1..300}; do
-      #       if curl -s --head http://localhost:5173 | grep "200 OK" > /dev/null; then
-      #         echo "Vite ready!"
-      #         break
-      #       fi
-      #       echo "Waiting for Vite... ($i/300)"
-      #       sleep 1
-      #     done
-      #     if [ $i -eq 300 ]; then
-      #       echo "Vite failed to start within 300 seconds"
-      #       exit 1
-      #     fi
-
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
           browser: chrome
+
+      - name: Upload Cypress screenshots
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+            name: cypress-screenshots
+            path: cypress/screenshots/
+            
+      - name: Upload Cypress videos
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+            name: cypress-videos
+            path: cypress/videos/
