--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   cypress-tests:
     runs-on: ubuntu-latest
-    
+
     # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
     # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
     # Also see warning here https://github.com/cypress-io/github-action#parallel
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
         containers: [1, 2] # Uses 2 parallel instances
-    
+
     env:
       CI: true
 
@@ -89,12 +89,12 @@ jobs:
           # Use demo project to avoid authentication issues
           export FIREBASE_PROJECT_ID=demo-levante-test
           export GCLOUD_PROJECT=demo-levante-test
-          
+
           # Configure Firebase to use demo project
           npx firebase use demo-levante-test --add || true
-          
+
           npm run dev &
-          
+
           # Wait for emulators to start and be ready
           echo "Waiting for Firebase emulators to start..."
           for i in {1..60}; do
@@ -132,6 +132,9 @@ jobs:
           export VITE_EMULATOR=TRUE
           export VITE_FIREBASE_PROJECT=DEV
           export VITE_LEVANTE=TRUE
+          export CI=true
+          export NODE_ENV=production
+          export VITE_QUERY_DEVTOOLS_ENABLED=false
           npm run dev &
 
       - name: Wait for Vite dev server
@@ -163,20 +166,20 @@ jobs:
             echo "✗ App is not serving HTML content"
             echo "Response: $response"
           fi
-          
+
           # Check if basic app elements are present
           if echo "$response" | grep -q "id=\"app\""; then
             echo "✓ App container found"
           else
             echo "✗ App container not found"
           fi
-          
+
           # Show environment variables being used
           echo "Environment variables:"
           echo "VITE_EMULATOR: ${VITE_EMULATOR:-not set}"
           echo "VITE_FIREBASE_PROJECT: ${VITE_FIREBASE_PROJECT:-not set}" 
           echo "VITE_LEVANTE: ${VITE_LEVANTE:-not set}"
-          
+
           # Check if we can access the sign-in page specifically
           echo "Checking sign-in page..."
           signin_response=$(curl -s http://localhost:5173/signin)
@@ -191,7 +194,7 @@ jobs:
         with:
           browser: chrome
           wait-on: 'http://localhost:5173'
-          # Records to Cypress Cloud 
+          # Records to Cypress Cloud
           record: true
           parallel: true # Runs test in parallel using settings above
         env:
@@ -203,17 +206,20 @@ jobs:
           VITE_EMULATOR: TRUE
           VITE_FIREBASE_PROJECT: DEV
           VITE_LEVANTE: TRUE
+          CI: true
+          NODE_ENV: production
+          VITE_QUERY_DEVTOOLS_ENABLED: false
 
       - name: Upload Cypress screenshots
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-            name: cypress-screenshots-${{ matrix.containers }}
-            path: cypress/screenshots/
-            
+          name: cypress-screenshots-${{ matrix.containers }}
+          path: cypress/screenshots/
+
       - name: Upload Cypress videos
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-            name: cypress-videos-${{ matrix.containers }}
-            path: cypress/videos/
+          name: cypress-videos-${{ matrix.containers }}
+          path: cypress/videos/
