--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -194,6 +194,12 @@ jobs:
       - name: Wait for App to be ready
         run: npm run test:setup
 
+      - name: Show Vite log (if needed)
+        if: always()
+        run: |
+          echo "📄 Dumping vite.log:"
+          cat vite.log || echo "vite.log not found"
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
