--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -130,12 +130,12 @@ jobs:
         run: |
           # Set environment variables for emulator mode
           export VITE_EMULATOR=TRUE
-          export VITE_FIREBASE_PROJECT=demo-levante-test
+          export VITE_FIREBASE_PROJECT=DEV
           export VITE_LEVANTE=TRUE
           export CI=true
           export NODE_ENV=development
           export VITE_QUERY_DEVTOOLS_ENABLED=false
-          nohup npm run dev > vite.log 2>&1 &
+          npm run dev &
 
       - name: Wait for Vite dev server
         run: |
@@ -216,7 +216,7 @@ jobs:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
           # Pass environment variables to Cypress tests
           VITE_EMULATOR: TRUE
-          VITE_FIREBASE_PROJECT: demo-levante-test
+          VITE_FIREBASE_PROJECT: DEV
           VITE_LEVANTE: TRUE
           CI: true
           # Fixed: Use development mode for dev server
