--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -127,15 +127,14 @@ jobs:
           npm run emulator:seed
 
       - name: Start Vite dev server
-        run: |
-          # Set environment variables for emulator mode
-          export VITE_EMULATOR=TRUE
-          export VITE_FIREBASE_PROJECT=DEV
-          export VITE_LEVANTE=TRUE
-          export CI=true
-          export NODE_ENV=development
-          export VITE_QUERY_DEVTOOLS_ENABLED=false
-          npm run dev &
+        env:
+          VITE_EMULATOR: 'TRUE'
+          VITE_FIREBASE_PROJECT: 'DEV'
+          VITE_LEVANTE: 'TRUE'
+          CI: 'true'
+          NODE_ENV: 'development'
+          VITE_QUERY_DEVTOOLS_ENABLED: 'false'
+        run: npm run dev &
 
       - name: Wait for Vite dev server
         run: |
