test: add  VITE_FIREBASE_PROJECT var

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -89,6 +89,7 @@ jobs:
           # Use demo project to avoid authentication issues
           export FIREBASE_PROJECT_ID=demo-levante-test
           export GCLOUD_PROJECT=demo-levante-test
+          export VITE_FIREBASE_PROJECT=demo-levante-test
 
           # Configure Firebase to use demo project
           npx firebase use demo-levante-test --add || true
