test: add global vars

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -27,6 +27,9 @@ jobs:
       VITE_LEVANTE: TRUE
       NODE_ENV: development
       VITE_QUERY_DEVTOOLS_ENABLED: false
+      FIREBASE_PROJECT_ID: demo-levante-test
+      GCLOUD_PROJECT: demo-levante-test
+      VITE_FIREBASE_PROJECT: demo-levante-test
 
     steps:
       - name: Generate token
