--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -12,10 +12,23 @@ RUN apk add --no-cache \
     ttf-freefont \
     openjdk11-jre \
     curl \
-    bash
+    bash \
+    # Dependencies for canvas and other native modules
+    cairo-dev \
+    jpeg-dev \
+    pango-dev \
+    musl-dev \
+    gcc \
+    g++ \
+    make \
+    python3
 
 # Install global tools
 RUN npm install -g firebase-tools vite wait-on
+
+# Set environment variables for native modules
+ENV PKG_CONFIG_PATH=/usr/lib/pkgconfig
+ENV PKG_CONFIG_LIBDIR=/usr/lib/pkgconfig
 
 # Set working directory
 WORKDIR /app
