test: remove local docker

--- a/Dockerfile.firebase
+++ b/Dockerfile.firebase
@@ -4,7 +4,8 @@ FROM node:20-alpine
 RUN apk add --no-cache \
     curl \
     bash \
-    openjdk11-jre
+    openjdk11-jre \
+    git
 
 # Install Firebase CLI globally
 RUN npm install -g firebase-tools
@@ -12,22 +13,36 @@ RUN npm install -g firebase-tools
 # Set working directory
 WORKDIR /app
 
-# Copy package files for firebase-functions
-COPY firebase-functions/package*.json ./firebase-functions/
-COPY firebase-functions/functions/levante-admin/package*.json ./firebase-functions/functions/levante-admin/
-
-# Install firebase-functions dependencies
-RUN cd firebase-functions && npm install
-RUN cd firebase-functions/functions/levante-admin && npm install
-
-# Copy firebase-functions source
-COPY firebase-functions ./firebase-functions
-
-# Build firebase functions
-RUN cd firebase-functions/functions/levante-admin && npm run build
-
 # Copy firebase configuration
 COPY firebase.json .firebaserc ./
+
+# Script to clone and setup firebase-functions
+COPY <<EOF /app/setup-firebase.sh
+#!/bin/bash
+set -e
+
+# Clone firebase-functions repository
+echo "Cloning firebase-functions repository..."
+git clone https://github.com/levante-framework/firebase-functions.git
+
+# Install dependencies
+echo "Installing firebase-functions dependencies..."
+cd firebase-functions
+npm install
+
+# Build levante-admin functions
+echo "Building levante-admin functions..."
+if [ -d "functions/levante-admin" ]; then
+    cd functions/levante-admin
+    npm install
+    npm run build
+else
+    echo "levante-admin functions directory not found"
+    exit 1
+fi
+EOF
+
+RUN chmod +x /app/setup-firebase.sh
 
 # Expose ports
 EXPOSE 4001 9199 8180 5002 9899
@@ -38,6 +53,7 @@ HEALTHCHECK --interval=10s --timeout=5s --start-period=30s --retries=30 \
 
 # Start Firebase emulators
 CMD ["sh", "-c", "\
+    /app/setup-firebase.sh && \
     cd firebase-functions && \
     npx firebase use demo-levante-test --add || true && \
     npm run dev"] 
