--- a/.github/workflows/cypress-tests-docker.yml
+++ b/.github/workflows/cypress-tests-docker.yml
@@ -34,14 +34,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Run E2E tests with Docker Compose
+      - name: Verify Docker Compose
+        run: |
+          docker compose version || docker-compose --version
+          echo "Docker Compose is available"
+
+            - name: Run E2E tests with Docker Compose
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
           # Make script executable
           chmod +x docker-test.sh
-
+          
           # Run tests
           ./docker-test.sh test
 
