--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -41,177 +41,24 @@ jobs:
           path: firebase-functions
           token: ${{ steps.generate_token.outputs.token }}
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Cache Firebase Emulators
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/firebase/emulators
-          key: ${{ runner.os }}-firebase-emulators-${{ hashFiles('firebase-functions/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-firebase-emulators-
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Install firebase-functions dependencies
+      - name: Verify Docker Compose
         run: |
-          cd firebase-functions
-          npm install
+          docker compose version || docker-compose --version
+          echo "Docker Compose is available"
 
-      - name: Build firebase functions
-        run: |
-          cd firebase-functions
-          # Build the levante-admin functions specifically
-          if [ -d "functions/levante-admin" ]; then
-            echo "Building levante-admin functions"
-            cd functions/levante-admin
-            npm install
-            npm run build
-          else
-            echo "levante-admin functions directory not found"
-            exit 1
-          fi
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Start Firebase emulators
-        run: |
-          cd firebase-functions
-          # Use demo project to avoid authentication issues
-          export FIREBASE_PROJECT_ID=demo-levante-test
-          export GCLOUD_PROJECT=demo-levante-test
-
-          # Configure Firebase to use demo project
-          npx firebase use demo-levante-test --add || true
-
-          npm run dev &
-
-          # Wait for emulators to start and be ready
-          echo "Waiting for Firebase emulators to start..."
-          for i in {1..60}; do
-            # Check if essential services are ready
-            if curl -s http://localhost:4001 > /dev/null 2>&1 && \
-               curl -s http://localhost:9199 > /dev/null 2>&1 && \
-               curl -s http://localhost:8180 > /dev/null 2>&1 && \
-               curl -s http://localhost:5002 > /dev/null 2>&1 && \
-               curl -s http://localhost:9899 > /dev/null 2>&1; then
-              echo "Firebase emulators are ready!"
-              break
-            fi
-            if [ $i -eq 60 ]; then
-              echo "Firebase emulators failed to start within 60 seconds"
-              echo "Checking emulator status:"
-              curl -s http://localhost:4001 || echo "UI emulator (4001) not ready"
-              curl -s http://localhost:9199 || echo "Auth emulator (9199) not ready"
-              curl -s http://localhost:8180 || echo "Firestore emulator (8180) not ready"
-              curl -s http://localhost:5002 || echo "Functions emulator (5002) not ready"
-              curl -s http://localhost:9899 || echo "Tasks emulator (9899) not ready"
-              exit 1
-            fi
-            echo "Waiting for emulators... ($i/60)"
-            sleep 1
-          done
-
-      - name: Seed emulator data
-        run: |
-          cd firebase-functions
-          npm run emulator:seed
-
-      - name: Start Vite dev server
-        run: |
-          # Set environment variables for emulator mode
-          export VITE_EMULATOR=TRUE
-          export VITE_FIREBASE_PROJECT=DEV
-          export VITE_LEVANTE=TRUE
-          export CI=true
-          export NODE_ENV=development
-          export VITE_QUERY_DEVTOOLS_ENABLED=false
-          npm run dev &
-
-      - name: Wait for Vite dev server
-        run: |
-          echo "Waiting for Vite dev server to start..."
-          for i in {1..120}; do
-            if curl -s http://localhost:5173 > /dev/null 2>&1; then
-              echo "Vite dev server is ready!"
-              # Give it a few more seconds to fully initialize the app
-              sleep 5
-              break
-            fi
-            if [ $i -eq 120 ]; then
-              echo "Vite dev server failed to start within 120 seconds"
-              exit 1
-            fi
-            echo "Waiting for Vite dev server... ($i/120)"
-            sleep 1
-          done
-
-      - name: Debug application state
-        run: |
-          echo "Checking if app is properly loaded..."
-          # Check if the app loads and contains expected elements
-          response=$(curl -s http://localhost:5173)
-          if echo "$response" | grep -q "<!doctype html" || echo "$response" | grep -q "<!DOCTYPE html"; then
-            echo "✓ App is serving HTML content"
-          else
-            echo "✗ App is not serving HTML content"
-            echo "Response: $response"
-          fi
-
-          # Check if basic app elements are present
-          if echo "$response" | grep -q "id=\"app\""; then
-            echo "✓ App container found"
-          else
-            echo "✗ App container not found"
-          fi
-
-          # Show environment variables being used
-          echo "Environment variables:"
-          echo "VITE_EMULATOR: ${VITE_EMULATOR:-not set}"
-          echo "VITE_FIREBASE_PROJECT: ${VITE_FIREBASE_PROJECT:-not set}" 
-          echo "VITE_LEVANTE: ${VITE_LEVANTE:-not set}"
-          echo "NODE_ENV: ${NODE_ENV:-not set}"
-
-          # Check if we can access the sign-in page specifically
-          echo "Checking sign-in page..."
-          signin_response=$(curl -s http://localhost:5173/signin)
-          if echo "$signin_response" | grep -q "data-cy=input-username-email"; then
-            echo "✓ Sign-in form elements found"
-          else
-            echo "✗ Sign-in form elements not found"
-            echo "Sign-in response preview: $(echo "$signin_response" | head -c 500)"
-          fi
-
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          wait-on: 'http://localhost:5173'
-          # Records to Cypress Cloud
-          record: true
-          parallel: true # Runs test in parallel using settings above
+      - name: Run E2E tests with Docker Compose
         env:
-          # Required for recording and parallelization
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          # bot token
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
-          # Pass environment variables to Cypress tests
-          VITE_EMULATOR: TRUE
-          VITE_FIREBASE_PROJECT: DEV
-          VITE_LEVANTE: TRUE
-          CI: true
-          # Fixed: Use development mode for dev server
-          NODE_ENV: development
-          VITE_QUERY_DEVTOOLS_ENABLED: false
+        run: |
+          # Make script executable
+          chmod +x docker-test.sh
+
+          # Run tests
+          ./docker-test.sh test
 
       - name: Upload Cypress screenshots
         uses: actions/upload-artifact@v4
