--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -190,6 +190,7 @@ jobs:
         with:
           browser: chrome
           wait-on: 'http://localhost:5173'
+          wait-on-timeout: 40
           # Records to Cypress Cloud
           record: true
           parallel: true # Runs test in parallel using settings above
