test: add wait-on-timeout

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -215,6 +215,7 @@ jobs:
         with:
           browser: chrome
           wait-on: 'http://localhost:5173'
+          wait-on-timeout: 240
           # Records to Cypress Cloud
           record: true
           parallel: true # Runs test in parallel using settings above
