test: run test pipeline

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -210,6 +210,12 @@ jobs:
             echo "Sign-in response preview: $(echo "$signin_response" | head -c 500)"
           fi
 
+      - name: Start frontend server
+        run: npm run dev &
+
+      - name: Wait for Frontend to be Ready
+        run: npx wait-on http://localhost:5173 --timeout=240000
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
@@ -219,6 +225,8 @@ jobs:
           # Records to Cypress Cloud
           record: true
           parallel: true # Runs test in parallel using settings above
+          run: npx cypress run
+
         env:
           # Required for recording and parallelization
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
