--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "happy-dom": "^14.12.3",
     "husky": "^9.1.6",
     "nanoid": "^5.0.7",
+    "optimization-js": "^1.5.0",
     "prettier": "3.0.3",
     "sass": "^1.50.1",
     "vite": "^5.4.2",
