attempt to fix cypress tests

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "vite-plugin-mkcert": "^1.17.5",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vitest": "^2.0.5",
+    "wait-on": "^8.0.5",
     "workbox-build": "^7.1.1",
     "workbox-core": "^7.1.0",
     "workbox-routing": "^7.1.0",
