Add GCS support. Delete legacy files

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "i18n:crowdin:upload": "crowdin upload sources --config src/translations/crowdin/crowdin.yml",
     "i18n:crowdin:download": "crowdin download --config src/translations/crowdin/crowdin.yml",
     "i18n:csv-to-json": "node src/translations/tools/csv-to-json.js",
+    "i18n:upload:dev": "gsutil -m rsync -r -d -x '^(tools/|README_CROWDIN\\.md$|.*\\.ts$)' src/translations gs://levante-assets-dev/translations/dashboard",
+    "i18n:download-upload:dev": "npm run i18n:download-rebuild && npm run i18n:upload:dev",
     "predev": "sh -c 'if [ -n \"$CROWDIN_API_TOKEN\" ]; then npm run i18n:crowdin:download; fi' && node src/translations/tools/conditional-csv-to-json.js",
     "prebuild": "sh -c 'if [ -n \"$CROWDIN_API_TOKEN\" ]; then npm run i18n:crowdin:download; fi' && node src/translations/tools/conditional-csv-to-json.js",
     "i18n:validate": "node src/translations/tools/validate-csvs.js",
