--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "devDependencies": {
     "@pinia/testing": "^0.1.7",
     "@testing-library/vue": "^8.1.0",
+    "@testsprite/testsprite-mcp": "^0.0.18",
     "@types/lodash": "^4.14.196",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
