--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ coverage
 .cursor/mcp.json
 .cursor/rules/.env
 
+# TestSprite (contains transient secrets during local runs)
+testsprite_tests/tmp/config.json
+
 # Sentry Config File
 .env.sentry-build-plugin
 
