--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ coverage
 testsprite_tests/tmp/config.json
 testsprite_tests/tmp/test_results.json
 testsprite_tests/tmp/raw_report.md
+testsprite_tests/tmp/code_summary.json
 
 # Sentry Config File
 .env.sentry-build-plugin
