--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build:prod": "export VITE_LEVANTE=TRUE && vite build",
     "dev": "export VITE_LEVANTE=TRUE && export VITE_FIREBASE_PROJECT=DEV && export VITE_EMULATOR=TRUE && vite --force --host",
     "dev:db": "export VITE_LEVANTE=TRUE && export VITE_FIREBASE_PROJECT=DEV && vite --force --host",
+    "dev:db:runner": "export VITE_E2E_RUNNER=TRUE && export VITE_LEVANTE=TRUE && export VITE_FIREBASE_PROJECT=DEV && vite --host",
     "local:prod": "export VITE_LEVANTE=TRUE && export VITE_FIREBASE_PROJECT=PROD && vite --force --host",
     "dev:pc": "powershell -Command \"$env:VITE_LEVANTE='TRUE'; $env:VITE_FIREBASE_PROJECT='DEV'; vite --force --host\"",
-    "deploy:dev": "npm run build:dev && npx firebase use levante-admin-dev && npx firebase deploy --only hosting --config levante-firebase.json",
+    "deploy:dev": "npm run build:dev && npx firebase use levante-admin-dev && npx firebase deploy --only hosting --config firebase.json",
+    "deploy:dev:preview": "bash scripts/deploy-preview-dev.sh",
     "deploy:prod": "npm run build:prod && npx firebase use levante-admin-prod && npx firebase deploy --only hosting --config firebase.json",
     "cypress:open": "cypress open",
     "cypress:locales:emulator": "E2E_USE_ENV=TRUE E2E_BASE_URL=http://localhost:5173/signin E2E_TEST_EMAIL=student@levante.test E2E_TEST_PASSWORD=student123 npx cypress run --e2e --spec cypress/e2e/locales-emulator.cy.ts",
